1.2.14:
- Disabled truetype for now until the forge bug has been resolved

1.2.13:
- Updates to latest McJtyLib

1.2.12:
- Fixed how automation/gui item handling works for the crafter. Should fix all corner cases
- Fixed the filter slot in the crafter being mapped to the first output slot

1.2.11:
- Inserting/extracting from the crafter (using hopper or whatever) should now be correct

1.2.10:
- The advanced porter gui works again
- The teleportprobe gui works again
- Avoid a rare crash during model registration
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

1.2.9-alpha:
- Fixed a networking problem on servers

1.2.8-alpha:
- Updates to the latest McJtyLib
- The Storage Control module works again in combination with the Storage Scanner
- Fixed language files

1.2.4-alpha:
- Update to latest Forge

1.2.3:
- Update to latest Forge

1.2.2:
- Update to 1.14.4

1.2.0:
- Depends on McJtyLib 3.5.0!
- Added some crash protection that shouldn't be needed but apparently is

1.1.2:
- Needs McJtyLib 3.1.0
- Support for COFH RF API is removed. Only Forge Energy is supported now
- Various cleanups

1.1.1:
- Fix problem with network packet doing things on the wrong thread
- Fix a lot of console spam if things go wrong and added a bit more diagnostics

1.1.0:
- Made compatible with the latest McJtyLib (3.0.0)
- Bugfix with a rare crash that could occur when switching dimensions

1.1.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)
- Bugfix with a rare crash that could occur when switching dimensions