@@ -11,7 +11,13 @@ public class DataGenerators {
     @SubscribeEvent
     public static void gatherData(GatherDataEvent event) {
         DataGenerator generator = event.getGenerator();
-        generator.addProvider(new Recipes(generator));
-        generator.addProvider(new LootTables(generator));
+        if (event.includeServer()) {
+            generator.addProvider(new Recipes(generator));
+            generator.addProvider(new LootTables(generator));
+        }
+        if (event.includeClient()) {
+            generator.addProvider(new BlockStates(generator, event.getExistingFileHelper()));
+            generator.addProvider(new Items(generator, event.getExistingFileHelper()));
+        }
     }
 }
