@@ -1,18 +1,0 @@
-{
-  // Not yet working!
-  "forge_marker": 1,
-  "defaults": {
-    "model": "rftoolsutility:charged_porter"
-  },
-  "variants": {
-    "l0": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml0" } },
-    "l1": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml1" } },
-    "l2": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml2" } },
-    "l3": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml3" } },
-    "l4": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml4" } },
-    "l5": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml5" } },
-    "l6": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml6" } },
-    "l7": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml7" } },
-    "l8": { "textures": { "txt": "rftoolsutility:item/chargedPorterIteml8" } }
-  }
-}
