@@ -1,10 +1,96 @@
 {
   "variants": {
-    "facing=north": { "model": "rftoolsutility:block/simple_dialer" },
-    "facing=south": { "model": "rftoolsutility:block/simple_dialer", "y": 180 },
-    "facing=west": { "model": "rftoolsutility:block/simple_dialer", "y": 270 },
-    "facing=east": { "model": "rftoolsutility:block/simple_dialer", "y": 90 },
-    "facing=up": { "model": "rftoolsutility:block/simple_dialer", "x": -90 },
-    "facing=down": { "model": "rftoolsutility:block/simple_dialer", "x": 90 }
+    "logic_facing=down_tonorth": {
+      "model": "rftoolsutility:block/simple_dialer_0",
+      "x": 90
+    },
+    "logic_facing=down_tosouth": {
+      "model": "rftoolsutility:block/simple_dialer_1",
+      "x": 90
+    },
+    "logic_facing=down_towest": {
+      "model": "rftoolsutility:block/simple_dialer_2",
+      "x": 90
+    },
+    "logic_facing=down_toeast": {
+      "model": "rftoolsutility:block/simple_dialer_3",
+      "x": 90
+    },
+    "logic_facing=up_tonorth": {
+      "model": "rftoolsutility:block/simple_dialer_0",
+      "x": -90
+    },
+    "logic_facing=up_tosouth": {
+      "model": "rftoolsutility:block/simple_dialer_1",
+      "x": -90
+    },
+    "logic_facing=up_towest": {
+      "model": "rftoolsutility:block/simple_dialer_2",
+      "x": -90
+    },
+    "logic_facing=up_toeast": {
+      "model": "rftoolsutility:block/simple_dialer_3",
+      "x": -90
+    },
+    "logic_facing=north_towest": {
+      "model": "rftoolsutility:block/simple_dialer_0"
+    },
+    "logic_facing=north_toeast": {
+      "model": "rftoolsutility:block/simple_dialer_1"
+    },
+    "logic_facing=north_toup": {
+      "model": "rftoolsutility:block/simple_dialer_2"
+    },
+    "logic_facing=north_todown": {
+      "model": "rftoolsutility:block/simple_dialer_3"
+    },
+    "logic_facing=south_towest": {
+      "model": "rftoolsutility:block/simple_dialer_0",
+      "y": 180
+    },
+    "logic_facing=south_toeast": {
+      "model": "rftoolsutility:block/simple_dialer_1",
+      "y": 180
+    },
+    "logic_facing=south_toup": {
+      "model": "rftoolsutility:block/simple_dialer_2",
+      "y": 180
+    },
+    "logic_facing=south_todown": {
+      "model": "rftoolsutility:block/simple_dialer_3",
+      "y": 180
+    },
+    "logic_facing=west_tonorth": {
+      "model": "rftoolsutility:block/simple_dialer_0",
+      "y": 270
+    },
+    "logic_facing=west_tosouth": {
+      "model": "rftoolsutility:block/simple_dialer_1",
+      "y": 270
+    },
+    "logic_facing=west_toup": {
+      "model": "rftoolsutility:block/simple_dialer_2",
+      "y": 270
+    },
+    "logic_facing=west_todown": {
+      "model": "rftoolsutility:block/simple_dialer_3",
+      "y": 270
+    },
+    "logic_facing=east_tonorth": {
+      "model": "rftoolsutility:block/simple_dialer_0",
+      "y": 90
+    },
+    "logic_facing=east_tosouth": {
+      "model": "rftoolsutility:block/simple_dialer_1",
+      "y": 90
+    },
+    "logic_facing=east_toup": {
+      "model": "rftoolsutility:block/simple_dialer_2",
+      "y": 90
+    },
+    "logic_facing=east_todown": {
+      "model": "rftoolsutility:block/simple_dialer_3",
+      "y": 90
+    }
   }
 }
